# speak-natural

./: .gitignore  API_CALLS_REFERENCE.sh  DEPLOYMENT.md  DEPLOYMENT_FIX.md  README.md  USAGE.md  add-secrets.sh  analyze.js  audioExtractor.js  convertAudio.js  deploy.sh  docker-compose.yml  example.js  index.js  package-lock.json  package.json  setup-secrets.sh  speechAnalyzer.js
docs/: GUEST_ANALYSIS_PLAN.md
python/: .env.example  .gcloudignore  .gitignore  API_GUIDE.md  ARCHITECTURE.md  Dockerfile  INTELLIGENT_SEGMENTS.md  METRICS_GUIDE.md  QUICKSTART.md  README.md  README_API.md  S3_ARCHITECTURE.md  SUPABASE_MIGRATION.md  api_requirements.txt  cloudbuild.yaml  docker-compose.yml  pyproject.toml  railway.toml  run_migration.py  send_test_webhook.py  speak_right_binary.py  test_api_client.py  test_database_integration.py  verify_auth_flow.py
python/api/: __init__.py  attendee_service.py  auth.py  billing_service.py  database.py  guest_service.py  link_calendar.py  main.py  models.py  sales_service.py  storage_manager.py  team_service.py
python/conversation_scorer/: conversation_scorer.py  conversation_scorer_binary.py
python/docs/: ADMIN_CLI_PLAN.md  ATTENDEE_INTEGRATION_PLAN.md  ATTENDEE_MODELS_PLAN.md  AUTH_INIT_PLAN.md  BILLING_PLAN.md  DEEPGRAM_MIGRATION_PLAN.md  FREE_TIER_PLAN.md  GO_LIVE_PLAN.md  SALES_ANALYZER_PLAN.md
python/docs/live/: DATABASE_REFACTOR_PLAN.md  GOOGLE_OAUTH_PLAN.md  UI_FIXES_PLAN.md  ZOOM_OAUTH_PLAN.md
python/migrations/: 001_create_coaching_sessions.sql  002_sales_analyzer.sql  003_attendee_integration.sql  004_zoom_oauth.sql  005_billing.sql  006_call_name.sql  007_backfill_roles.sql  008_quota_columns.sql
python/models/: attendee.py  transcript.py
python/prompts/: segment_selection_prompt.md
python/services/: __init__.py  audio_processor.py  intelligent_segment_selector.py  metrics_generator.py  practice_analyzer.py  sales_call_analyzer.py  sales_call_processor.py  script_generator.py  segment_generator.py  voice_cloning_service.py  waveform_generator.py
python/speach_to_text/: transcribe.py  transcribe_binary.py
python/tests/: conftest.py  test_billing_client.py  test_sales_service.py
python/text_to_speach/: text_to_speach.py
python/transcript_enhancement/: enhance_transcript.py  enhance_transcript_binary.py
python/utils/: attendee_utils.py  aws_utils.py  billing_client.py  deepgram_client.py  llm_client.py  openapi_utils.py  s3_paths.py
python/vocal_analysis/: README.md  README_PIPELINE.md  analyze_speech.py  compare_speech.py  generate_ssml.py  run_full_coaching.py  visualize_speech.py
(+35 files in other folders)
