[project]
name = "speak-right"
version = "2.0.0"
description = "AI-powered sales call analysis service"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    # AWS S3
    "boto3>=1.34.0",
    # Transcription
    # Audio conversion (ffmpeg wrapper)
    "pydub>=0.25.1",
    "python-dotenv>=1.0.0",
    # FastAPI
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    # LLM
    "google-genai>=1.66.0",
    "anthropic>=0.7.0",
    # Auth + DB
    "supabase>=2.0.0,<2.27.0",
    "pyjwt[crypto]>=2.8.0",
    "cryptography>=41.0.0",
    "audioop-lts>=0.2.2; python_version >= '3.13'",
    "google-auth-oauthlib>=1.3.1",
    "deepgram-sdk>=6.1.1",
    # Billing
    "dodopayments[webhooks]>=0.7.0",
    "mutagen>=1.47.0",
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
